中文目录被当成英语复数加了后缀s

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,6 @@
 baseURL = "https://475300.github.io/"
 languageCode = "zh-cn"
 title = "乐土为家"
+pluralizelisttitles = "false"
 theme = "the-roots-home"
 # theme = "hugo-theme-learn"
