--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hugo-theme-learn"]
 	path = themes/hugo-theme-learn
 	url = https://github.com/matcornic/hugo-theme-learn.git
+[submodule "themes/the-roots-home"]
+	path = themes/the-roots-home
+	url = https://github.com/475300/the-roots-home.git
