--- a/config.toml
+++ b/config.toml
@@ -2,5 +2,5 @@ baseURL = "https://475300.github.io/"
 languageCode = "zh-cn"
 title = "乐土为家"
 pluralizelisttitles = "false"
-# theme = "the-roots-home"
-theme = "hugo-theme-learn"
+theme = "the-roots-home"
+# theme = "hugo-theme-learn"
