--- a/config.toml
+++ b/config.toml
@@ -4,4 +4,8 @@ title = "乐土为家"
 pluralizelisttitles = "false"
 hasCJKLanguage = "true"
 theme = "the-roots-home"
+[Params]
+Description = "enel ♥ sajiner"
+[taxonomies]
+author = "authors"
 # theme = "hugo-theme-learn"
