--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "themes/the-roots-home"]
 	path = themes/the-roots-home
 	url = https://github.com/475300/the-roots-home.git
-[submodule ".\\themes\\hugo-easy-gallery"]
-	path = .\\themes\\hugo-easy-gallery
+[submodule "themes/hugo-easy-gallery"]
+	path = themes/hugo-easy-gallery
 	url = https://github.com/liwenyip/hugo-easy-gallery.git
